--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html lang="es">
   <head>
-    <title></title>
+    <title>index.html</title>
   </head>
   <body background="fondo1.png">
     <header>
